# odyssey-osaka-cx

docs/: asyncapi.yml  genai-oas.yaml  nosql-workbench.json  oas.yaml
gen-ai-server/: README.md  handler.py  pyproject.toml
gen-ai-server/gen_ai_server/: rag.py
genai-server/: pyproject.toml
iac/: .gitignore  biome.json  cdk.json  package-lock.json  package.json
iac/lib/: gen-ai-stack.ts  odyssey-osaka-stack.ts  odyssey-osaka-web-stack.ts
iac/lib/constructs/: api.ts  database.ts  gen-ai-api.ts  genai-api.ts  ws-api.ts
iac/lib/vtl-templates/: create-answer-request.vtl  create-session-comment-request.vtl  create-session-comment-response.vtl  list-answers-request.vtl  list-answers-response.vtl  list-questionnaires-response.vtl  list-session-comments-request.vtl  list-session-comments-response.vtl  list-sessions-response.vtl  put-choice-request.vtl  put-choice-response.vtl
iac/resources/: send-message-handler.ts  ws-handler.ts
iac/resources/database/: dynamo.ts  entity.ts  index.ts  query.ts
web/: .eslintrc.cjs  README.md  index.html  package-lock.json  package.json
web/src/: App.tsx  config.ts  main.tsx
web/src/api/: pokemon.ts
web/src/components/: AddChoiceModal.tsx  DarkBackDrop.tsx  Header.tsx  Loading.stories.tsx  Loading.tsx  PlaceholderLoading.tsx  QuestionnaireItem.tsx  RegistrationModal.tsx  RegistrationNicknameModal.tsx
web/src/hooks/: useCommentEvent.tsx  useGenAI.tsx  useHome.tsx  useLocalStore.ts  useQuestionnaireAnswers.tsx  useQuestionnaireEvent.tsx  useQuestionnaires.tsx  useSessionComments.tsx  useSessions.tsx
(+24 files in other folders)
