[tool.poetry]
name = "gen-ai-server"
version = "0.1.0"
description = ""
authors = ["Shuya Kinjo <a8109058@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.3"
boto3 = "^1.34.141"
langchain-aws = "^0.1.9"
langchain-core = "^0.2.12"
langchain = "^0.2.7"
langchainhub = "^0.1.20"
langchain-community = "^0.2.7"

[tool.poetry.group.dev.dependencies]
ruff = "^0.5.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
